Switched process start to a more modern way